[package]
name = "hello-world"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }
stellar-contract-utils = { version = "0.6.0" }
stellar-macros = { version = "0.6.0" }
wee_alloc = "0.4.5"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
